# spsc_queue

./: .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  spsc_queue.hpp  vcpkg.json
include/deaod/: spsc_queue.hpp
src/: benchmark.cpp  platform-win.cpp  platform.hpp
